--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/CoffeePantry/style.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Quicksand:wght@300..700&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Sigmar&display=swap" rel="stylesheet">
-    <title>Demo</title>
+    <title>Coffee and Pantry</title>
 </head>
 <body>
     <section class="cover">
@@ -59,7 +59,7 @@
                             Crafted with fresh, locally sourced ingredients and served on artisan bread, each sandwich is made to order with a balance of flavor and freshness. Whether it’s a classic ham and cheese, a grilled chicken and avocado on sourdough, or a roasted veggie and hummus wrap, we’ve got something to satisfy every craving. Ideal for lunch, a midday bite, or even a late breakfast, our sandwiches are designed to be filling, flavorful, and satisfying.
                         </p>
                     </div>
-                    <a href="/CoffeePantry/menu.html" class="button">View Menu</a>
+                    <a href="menu.html" class="button">View Menu</a>
                 </div>
                 <div class="project-image">
                     <h3 class="image-title">Freshly Made Wholesome Meals</h3>
@@ -93,7 +93,7 @@
         <a href="https://www.instagram.com/_weberna_?igsh=MWl5M2l0ZDY4bTFkOA==">Developed by Weberna</a>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script src="/Salt Rock/component.js"></script>
+    <script src="component.js"></script>
     
 </body>
 </html>
