--- a/menu.html
+++ b/menu.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/CoffeePantry/style.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>Demo</title>
+    <title>Coffee and Pantry</title>
 </head>
 <body>
     <div class="header">
         <nav class="navbar">
-            <a href="/CoffeePantry/index.html" class="navbar-logo" style="font-family: 'Times New Roman', 'Pacifico'; font-weight: 600; font-style: bold;">Coffee Pantry</a>
+            <a href="index.html" class="navbar-logo" style="font-family: 'Times New Roman', 'Pacifico'; font-weight: 600; font-style: bold;">Coffee Pantry</a>
         </nav>
     </div>
     <section class="project-section">
@@ -55,6 +55,6 @@
         </div>
         <a href="https://www.instagram.com/_weberna_?igsh=MWl5M2l0ZDY4bTFkOA==">Designed by Weberna</a>
     </div>
-    <script src="/Sheppy/component/component.js"></script>
+    <script src="component.js"></script>
 </body>
 </html>
