--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="card-container">
                 <h3 class="image-title">Coffee That Warms the Soul☕</h3>
                 <div class="project-image">
-                    <img src="images/CP1.jpg" alt="#" class="image-container">
+                    <img src="images/cp1.jpg" alt="#" class="image-container">
                 </div>
                 <div class="menu-content">
                     <h3 class="card-title">Coffee That Warms the Soul☕</h3>
